trunk/Archive2/0b/c950239153557a/output
clang version 3.5 (trunk 198621)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:6:18: error: initializer for aggregate is not a compile-time constant [-Werror,-Wc99-extensions]
    int bar[1] = { foo };
                 ^~~~~~~
1 error generated.
